system/monitoring/resources/long-term-metrics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.alpha.kubernetes.io/enabled: "true"
  name: prometheus-long-term
  namespace: monitoring
spec:
  ingressClassName: nginx-internal
  rules:
    - host: prometheus-long-term.internal.dbcloud.org
      http:
        paths:
          - backend:
              service:
                name: prometheus-long-term
                port:
                  number: 9090
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - prometheus-long-term.internal.dbcloud.org
      secretName: prometheus-long-term-general-tls
